--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -24,15 +24,16 @@
 
 .modal {
   position: absolute;
-  top: 50%;
+  top: calc(50% + 30px);
   left: 50%;
   transform: translate(-50%, -50%);
 
   z-index: 999;
+  overflow-y: scroll;
 
-  width: 450px;
-  max-width: 100vw;
+  width: 450px;  
   height: 609px;
+  max-height: calc(100vh - 60px);
   padding: 40px;
 
   border-radius: 4px;
